<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.praneeth.chitchat.MainActivity"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.56"
            android:text="@string/email"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_Email_L"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editText_Email_L"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:text="@string/password"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_Password_L"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editText_Password_L"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/button_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Login" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.44"
        android:text="@string/tv"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/FirstName"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:text="@string/FirstName"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_FN_S"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editText_FN_S"
            android:textColor="@android:color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LastName"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:text="@string/LastName"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_LN_S"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editText_LN_S"
            android:textColor="@android:color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Email_Su"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:text="@string/Email_Su"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_Email_S"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/editText_Email_S"
            android:textColor="@android:color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_su"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:text="@string/password_su"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editText_Password_S"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editText_Password_S"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/button_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_SignUp" />


</LinearLayout>
